[package]
name = "tmog-events"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1"
chrono = { version = "0.4", features = ["serde"] }
clap = { version = "4", features = ["derive"] }
gcp_auth = { version = "0.12.3", default-features = false, features = ["aws-lc-rs"] }
reqwest = { version = "0.13", default-features = false, features = ["default-tls", "http2", "json"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
basic-toml = "0.1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }
